hphp/hack/test/typecheck/reactive/references_in_rx1.php.exp
File "references_in_rx1.php", line 4, characters 10-12:
References are not allowed in reactive code. (Naming[2088])
