hphp/hack/test/typecheck/reactive/references_in_rx1.php
<?hh

<<__Rx>>
function foo(
  &$x, // bad
): void {
}
